# DocScan-AI

./: .dockerignore  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
backend/: config.py  main.py
backend/api/: batch.py  chat.py  corrections.py  documents.py  export.py  extract.py  jobs.py  ocr.py  templates.py
backend/database/: crud.py  engine.py  models.py
backend/schemas/: chat.py  corrections.py  documents.py  extraction.py  invoice.py  jobs.py  ocr.py  templates.py
backend/services/: anchor_validator.py  chat_service.py  (+18 more)
frontend/: app.js  index.html  styles.css
scripts/: docker-entrypoint.sh
tests/: conftest.py  test_anchor_validator.py  test_batch_export.py  test_chat_api.py  test_config.py  test_correction_service.py  test_corrections_api.py  test_crud.py  test_documents_api.py  test_documents_filter.py  test_excel_exporter.py  test_extract_api.py  test_extraction_schemas.py  test_extractor_export.py  test_facturae_exporter.py  test_image_utils.py  test_intelligent_extractor.py  test_invoice_extractor.py  test_invoice_extractor_table_aware.py  test_invoice_schemas.py  test_invoice_validator.py  test_invoice_validator_irpf_recargo.py  test_iva_summary.py  test_job_cancel.py  test_layout_detector.py  test_llm_service.py  test_ocr_api.py  test_ocr_engine.py  test_pdf_parser.py  test_preprocessing.py  test_rag_service.py  test_schemas_sprint6.py  test_sii_exporter.py  test_table_extractor.py  test_table_merger.py  test_template_service.py  test_templates_api.py  test_word_exporter.py
(+13 files in other folders)
